        Learns Misty Explosion by level up

    Rhyperior:
        Learns Rock Wrecker upon evolving

    Happiny:
        Base exp: 110->250

    Pinsir:
        Catch rate: 45->90

    Mime Jr./Mr. Mime/Mr. Rime (not in main game):
        Gender Ratio: 50/50->100/0
        Type: Psychic/Fairy->Psychic

    Scyther (not in main game):
        Catch rate: 45->90
        Learn Lunge by move tutor (Teal Mask addition)

    Scizor/Kleavor (not in main game):
        Learn Lunge by move tutor (Teal Mask addition)

    Smoochum (not in main game):
        Catch rate: 45->150

    Elekid (not in main game):
        Atk: 63->65
        Def: 37->40
        SpA: 65->70
        Catch rate: 45->150
        Learns Electric Terrain by level up

    Electabuzz (not in main game):
        Atk: 83->85
        Def: 57->60
        SpA: 95->100
        Learns Electric Terrain by level up

    Electivire (not in main game):
        Atk: 123->125
        Def: 67->70
        SpA: 95->100

    Magby (not in main game):
        Def: 37->40
        Spe: 83->85
        Catch rate: 45->150

    Magmar (not in main game):
        Def: 57->60
        Spe: 93->95

    Magmortar (not in main game):
        Atk: 95->100
        Def: 67->70
        Spe: 83->85

    Magikarp:
        Learns Hydro Pump at level 35
        Learns Bounce at level 45

    Gyarados:
        Type: Water/Flying->Water

    Eevee (not in main game):
        Now evolves into Espeon with a Sun Stone
        Now evolves into Umbreon with a Moon Stone
        Now evolves into Sylveon with a Dawn Stone

    Aerodactyl:
        Learns Double-Edge, Head Smash, and Brave Bird by level up

    Munchlax (not in main game):
        Can also evolve at level 20

    Snorlax (not in main game):
        Learns Slack Off by level up

    Zapdos:
        Learns Air Slash by TM

    Noctowl:
        Learns Skill Swap by TM (Teal Mask addition)

    Togepi (not in main game):
        Can also evolve at level 16

    Azurill: